# crypto-predictor

./: .env.example  .gitignore  PROJECT_PLAN.md  analyzer.py  checksums.sha256  code_dump.txt  config.example.py  config.py  dashboard_app.py  db_logger.py  env.example  eta.py  evaluator.py  fetcher.py  main.py  notifier.py  pyproject.toml  repo_tree.txt  requirements.txt  run.sh  run_sentiment.py  sentiment.py
configs/: consensus.yaml  policy.yaml  providers.yaml  thresholds.yaml  universe.yaml  weights.yaml
crypto_predictor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: ADAUSDT_15m.csv  BNBUSDT_15m.csv  BTCUSDT_15m.csv  ETHUSDT_15m.csv  SOLUSDT_15m.csv  XRPUSDT_15m.csv  signals.csv  signals.db
data/news/: ADAUSDT.json  BNBUSDT.json  BTCUSDT.json  ETHUSDT.json  SOLUSDT.json  XRPUSDT.json
data/sentiment/: ADAUSDT.json  BNBUSDT.json  BTCUSDT.json  ETHUSDT.json  SOLUSDT.json  XRPUSDT.json
prompts/: ai_news_v1.txt  ai_research_v1.txt  ai_sentiment_v1.txt
scripts/: backup.sh  cleanup.sh  download_binance_history.py  generate_full_status_report.py  heartbeat.sh  run_backup.sh  run_cleanup.sh  run_main.sh  run_news_refresh.sh  run_notify.sh  run_once.sh  run_sentiment_refresh.sh
src/agents/: __init__.py  ai_base.py  ai_mock.py  ai_news.py  ai_research.py  ai_sentiment.py  base.py  certainty.py  news.py  news_api_client.py  research.py  sentiment.py  technical.py  trade_plan.py
src/app/: main.py  run_research.py  stats_daily.py
src/backtest/: __main__.py  agent_stats.py  core.py  equity.py  loader.py  metrics.py  param_sweep.py  (+8 more)
tests/: conftest.py
(+55 files in other folders)
