[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-predictor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["PyYAML>=6.0.1", "requests>=2.32"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]
